<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

   <data>

   </data>

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       tools:context=".SemesterHomeFragment">


      <TextView
          android:id="@+id/helloUser"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/hello_user"
          android:fontFamily="@font/roboto_bold"
          android:layout_margin="10dp"
          android:textSize="18sp"
          android:textColor="@color/raisin_black"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent" />

      <TextView
          android:id="@+id/welcomeBack"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/helloUser"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_margin="10dp"
          android:textSize="22sp"
          android:textColor="@color/raisin_black"
          android:text="@string/welcome_back"
          android:fontFamily="@font/roboto_bold" />

      <androidx.cardview.widget.CardView
         android:id="@+id/bannerCard"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          app:cardCornerRadius="8dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/welcomeBack">

         <ImageView
             android:id="@+id/bannerImage"
             android:layout_width="match_parent"
             android:layout_height="130dp"
             android:src="@drawable/semester_exam"
             android:scaleType="centerCrop"
             android:contentDescription="@string/welcome_back"
             />

      </androidx.cardview.widget.CardView>

      <TextView
          android:id="@+id/subjectHeader"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/subjects"
          android:textSize="17sp"
          android:textColor="@color/raisin_black"
          android:fontFamily="@font/roboto_bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/bannerCard"
          android:layout_margin="10dp" />


      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/subjectList"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          app:layout_constraintHorizontal_bias="0"
          app:layout_constraintTop_toBottomOf="@id/subjectHeader"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent" />

      <TextView
          android:id="@+id/takeExamHeader"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/take_exam"
          android:textSize="17sp"
          android:textColor="@color/raisin_black"
          android:fontFamily="@font/roboto_bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/subjectList"
          android:layout_margin="10dp" />

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/examSemesterList"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          android:scrollbars="none"
          app:layout_constraintHorizontal_bias="0"
          app:layout_constraintTop_toBottomOf="@id/takeExamHeader"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent" />


      <TextView
          android:id="@+id/examHistoryHeader"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/exam_history"
          android:textSize="17sp"
          android:textColor="@color/raisin_black"
          android:fontFamily="@font/roboto_bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/examSemesterList"
          android:layout_margin="10dp" />

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/examHistoryList"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_margin="8dp"
          android:scrollbars="vertical"
          app:layout_constraintHorizontal_bias="0"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toBottomOf="@id/examHistoryHeader"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent" />

   </androidx.constraintlayout.widget.ConstraintLayout>
</layout>